Collapsible for user age range slider, prevents accidental selection on mobile.

--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -51,6 +51,10 @@ button {
 	justify-content: center;
 }
 
+.navbar-link:hover {
+	background-color: initial;
+}
+
 #captcha-refresh-button {
 	height: 70px;
 	width: 70px;
